# agents

3_crew/my_debate/: README.md  pyproject.toml
3_crew/my_debate/output/: decide.md  oppose.md  propose.md
3_crew/my_debate/src/my_debate/: crew.py  main.py
3_crew/my_debate/src/my_debate/config/: agents.yaml
3_crew/my_financial_research/: README.md  pyproject.toml  report.md
3_crew/my_financial_research/src/my_financial_research/: crew.py  main.py
3_crew/my_financial_research/src/my_financial_research/config/: agents.yaml  tasks.yaml
3_crew/my_stock_picker/: README.md  pyproject.toml
3_crew/my_stock_picker/outputs/: fundamental_deep_dive.json  initial_stock_screening.json  managed_stock_selection_reporting.md  news_sentiment_review.json
3_crew/my_stock_picker/src/my_stock_picker/: crew.py  main.py
3_crew/my_stock_picker/src/my_stock_picker/config/: agents.yaml  tasks.yaml
3_crew/stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/stock_picker/output/: decision.md  research_report.json  trending_companies.json
