[project]
name = "my_financial_research"
version = "0.1.0"
description = "my_financial_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
my_financial_research = "my_financial_research.main:run"
run_crew = "my_financial_research.main:run"
train = "my_financial_research.main:train"
replay = "my_financial_research.main:replay"
test = "my_financial_research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
